repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__feed_maintainer_html__base.snap
---
source: repology-webapp/tests/snapshot_tests/feed_maintainer_html.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: text/html
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 5919
---
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="utf-8">
	<meta name="viewport" content="width=device-width, initial-scale=1">

	<meta name="description" content="Feed for maintainer johndoe@example.com in repository FreeBSD">
	<meta name="keywords" content="repository, package, packages, version">
	<meta name="author" content="Dmitry Marakasov">


	<link rel="alternate" href="/maintainer/johndoe%40example.com/feed-for-repo/freebsd/atom" type="application/atom+xml" />

	<title>Feed for johndoe@example.com in FreeBSD - Repology</title>
	<link rel="stylesheet" href="/static/bootstrap.min.v3.3.7.8dc6d358477be27a.css">
	<link rel="stylesheet" href="/static/repology.v21.bb7b05a7b3bfbdb9.css">
	<link rel="icon" href="/static/repology.v1.6108dff405ea1a42.ico" sizes="16x16 32x32 64x64" type="image/x-icon">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology packages" href="/opensearch/project.xml">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology maintainers" href="/opensearch/maintainer.xml">
</head>
<body>


<div class="site-alert-outer">
	<div class="container site-alert-inner">
		<p><a href="https://repology.org/">repology.org</a> domain is back up, repology.amdmi3.ru will be discontinued on October 9th<p>
	</div>
</div>


<nav class="navbar navbar-default navbar-static-top">
	<div class="container">
		<div class="navbar-header">
			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#repology-navbar-collapse" aria-expanded="false">
				<span class="sr-only">Toggle navigation</span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
			</button>
			<a class="navbar-brand" href="/">
				<img alt="Repology" src="/static/repology40x40.v1.0ea026630d9180a2.png" width="40" height="40">
			</a>
		</div>

		<div class="collapse navbar-collapse" id="repology-navbar-collapse">
			<ul class="nav navbar-nav">
				<li><a href="/projects/">Projects</a></li>
				<li class="active"><a href="/maintainers/">Maintainers</a></li>
				<li><a href="/repositories/statistics">Repositories</a></li>
				<li><a href="/tools">Tools</a></li>
				<li><a href="/security/recent-cves">Security</a></li>
			</ul>
			<ul class="nav navbar-nav navbar-right">
				<li><a href="/news">News</a></li>
				<li><a href="/docs">Docs</a></li>
			</ul>
		</div>
	</div>
</nav>


<div class="container">
	
	<h1 class="page-header">Feed for <strong><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></strong>
in <strong><a href="/repository/freebsd">FreeBSD</a></strong>
</h1>
</div>



<div class="container">

<p>This feed is also available in <a href="/maintainer/johndoe%40example.com/feed-for-repo/freebsd/atom">atom<img src="/static/feed.v1.210d8fdde71150a5.svg" width="16" height="16" alt="Atom feed"></a> format</p>

<p>
		<a href="/maintainer/johndoe%40example.com/feed-for-repo/freebsd?autorefresh=1" rel="nofollow">Enable</a> autorefresh.</p>


<table class="table table-striped">
	<tr>
		<th class="text-center">Date<span class="tzfix_zone"> (UTC)</span></th>
		<th class="text-center">Event</th>
	</tr>
	
	<tr>
		<td class="minimal-column"><time class="tzfix_time" datetime="2124-01-01T00:00+0000">2124-01-01 00:00</time></td>
		<td>
			<a href="/project/zsh/versions">zsh</a>
			
			is no longer maintained by <strong><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></strong>
			and/or was removed from <strong><a href="/repository/freebsd">FreeBSD</a></strong>
			
		</td>
	</tr>
	
	<tr>
		<td class="minimal-column"><time class="tzfix_time" datetime="2124-01-01T00:00+0000">2124-01-01 00:00</time></td>
		<td>
			<a href="/project/zsh/versions">zsh</a>
			
			<span class="version version-ignored">666</span> is ignored
			
		</td>
	</tr>
	
	<tr>
		<td class="minimal-column"><time class="tzfix_time" datetime="2124-01-01T00:00+0000">2124-01-01 00:00</time></td>
		<td>
			<a href="/project/zsh/versions">zsh</a>
			
			<span class="version version-outdated">222</span> is outdated
			by
				
				<span class="version version-newest">333</span>
				
				<span class="version version-newest">444</span>
				
			
			
		</td>
	</tr>
	
	<tr>
		<td class="minimal-column"><time class="tzfix_time" datetime="2124-01-01T00:00+0000">2124-01-01 00:00</time></td>
		<td>
			<a href="/project/zsh/versions">zsh</a>
			
			<span class="version version-outdated">555</span> is outdated
			
			
		</td>
	</tr>
	
	<tr>
		<td class="minimal-column"><time class="tzfix_time" datetime="2124-01-01T00:00+0000">2124-01-01 00:00</time></td>
		<td>
			<a href="/project/zsh/versions">zsh</a>
			
			<span class="version version-newest">111</span> is now up to date
			
		</td>
	</tr>
	
	<tr>
		<td class="minimal-column"><time class="tzfix_time" datetime="2124-01-01T00:00+0000">2124-01-01 00:00</time></td>
		<td>
			<a href="/project/zsh/versions">zsh</a>
			
			was added to <strong><a href="/repository/freebsd">FreeBSD</a></strong>
			and/or assigned to <strong><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></strong>
			
		</td>
	</tr>
	
</table>


</div>


<footer class="footer">
	<div class="container">
		<p class="pull-right footer-links">
			GitHub repositories:
			<a href="https://github.com/repology/repology-rs/tree/master/repology-webapp">webapp</a>,
			<a href="https://github.com/repology/repology-updater">updater</a>,
			<a href="https://github.com/repology/repology-rules">ruleset</a>
		</p>
		<p>
			Copyright (C) 2016-2026 Dmitry Marakasov<br>
			Code licensed under GPLv3+.
			
		</p>
	</div>
</footer>

<script src="/static/jquery-3.7.1.min.cc6904672d4db9a3.js"></script>
<script src="/static/bootstrap.min.v3.3.7.66502a3c5769c640.js"></script>
<script src="/static/moment.min.v2.29.2.b7efa16ed0d164d6.js"></script>
<script src="/static/repology.v2.ee0228ab3d88406f.js"></script>

</body>
</html>
